--- a/style.css
+++ b/style.css
@@ -312,3 +312,69 @@ nav .container{
 .card-cash{
     text-align: center;
 }
+
+
+
+/* Styling Section7 */
+
+.section7 .container{
+    padding-top: 50px;
+}
+.section7 p{
+    padding-bottom: 15px;
+    color: #818080;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+}
+
+
+/* Styling footer section */
+
+footer .container{
+    margin-top: 50px;
+}
+.foot-main{
+    border-top: 1px solid #bdbdbd;
+    border-bottom: 1px solid #bdbdbd;
+    margin-bottom: 30px;
+}
+.footer-links{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 50px;
+    padding-top: 30px;
+}
+.footer-links p{
+    padding-bottom: 10px;
+}
+.col{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.black{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    color: #121212;
+}
+.grey{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    color: #818080;  
+}
+.ways{
+    padding-bottom: 30px;
+}
+.footer-foot{
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 20px;
+}
+.copy{
+    display: flex;
+    gap: 10px;
+    color: #bdbdbd;
+}
