--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto';
+    transition: all .5s ease;
 }
 .container{
     max-width: 1200px;
@@ -35,12 +36,20 @@ nav .container{
     line-height: 13px;
     font-weight: 400;
 }
+.links a:hover{
+    color: blue;
+}
 .buttons{
     display: flex;
     justify-content: center;
     gap: 50px;
 }
-
+.logo:hover{
+    transform: scale(1.2);
+}
+.buttons img:hover{
+    transform: scale(1.2);
+}
 /* Styling hero section */
 
 .hero{
@@ -69,6 +78,9 @@ nav .container{
     font-weight: 400;
     border-radius: 40px;
 }
+.more:hover{
+    opacity: .7;
+}
 .hero-buttons{
     display: flex;
     justify-content: center;
@@ -85,6 +97,10 @@ nav .container{
     border: #0071E3 1px solid;
     background-color: transparent;
     border-radius: 40px;   
+}
+.buy:hover{
+    background-color: #0071E3;
+    color: white;
 }
 .hero-info{
     position: absolute;
@@ -376,6 +392,10 @@ footer .container{
     font-weight: 400;
     line-height: 16px;
     color: #818080;  
+}
+.grey:hover{
+    text-decoration: underline;
+    cursor: pointer;
 }
 .ways{
     padding-bottom: 30px;
